--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Malla Curricular Interactiva</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Malla Curricular Interactiva</h1>
 
+  <section>
+    <h2>Cursos Generales</h2>
+    <div id="generales">
+      <h3>Ciclo 0</h3>
+      <div class="grid-container" id="generales-ciclo-0"></div>
+      <h3>Ciclo 1</h3>
+      <div class="grid-container" id="generales-ciclo-1"></div>
+      <h3>Ciclo 2</h3>
+      <div class="grid-container" id="generales-ciclo-2"></div>
+      <h3>Ciclo 3</h3>
+      <div class="grid-container" id="generales-ciclo-3"></div>
+      <h3>Ciclo 4</h3>
+      <div class="grid-container" id="generales-ciclo-4"></div>
+      <h3>Ciclo 5</h3>
+      <div class="grid-container" id="generales-ciclo-5"></div>
+      <h3>Ciclo 6</h3>
+      <div class="grid-container" id="generales-ciclo-6"></div>
+      <h3>Ciclo 7</h3>
+      <div class="grid-container" id="generales-ciclo-7"></div>
+      <h3>Ciclo 8</h3>
+      <div class="grid-container" id="generales-ciclo-8"></div>
+      <h3>Ciclo 9</h3>
+      <div class="grid-container" id="generales-ciclo-9"></div>
+      <h3>Ciclo 10</h3>
+      <div class="grid-container" id="generales-ciclo-10"></div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Cursos de la Carrera</h2>
+    <div id="carrera">
+      <h3>Ciclo 0</h3>
+      <div class="grid-container" id="carrera-ciclo-0"></div>
+      <h3>Ciclo 1</h3>
+      <div class="grid-container" id="carrera-ciclo-1"></div>
+      <h3>Ciclo 2</h3>
+      <div class="grid-container" id="carrera-ciclo-2"></div>
+      <h3>Ciclo 3</h3>
+      <div class="grid-container" id="carrera-ciclo-3"></div>
+      <h3>Ciclo 4</h3>
+      <div class="grid-container" id="carrera-ciclo-4"></div>
+      <h3>Ciclo 5</h3>
+      <div class="grid-container" id="carrera-ciclo-5"></div>
+      <h3>Ciclo 6</h3>
+      <div class="grid-container" id="carrera-ciclo-6"></div>
+      <h3>Ciclo 7</h3>
+      <div class="grid-container" id="carrera-ciclo-7"></div>
+      <h3>Ciclo 8</h3>
+      <div class="grid-container" id="carrera-ciclo-8"></div>
+      <h3>Ciclo 9</h3>
+      <div class="grid-container" id="carrera-ciclo-9"></div>
+      <h3>Ciclo 10</h3>
+      <div class="grid-container" id="carrera-ciclo-10"></div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Cursos Sello UP</h2>
+    <div id="sello">
+      <h3>Ciclo 2</h3>
+      <div class="grid-container" id="sello-ciclo-2"></div>
+      <h3>Ciclo 3</h3>
+      <div class="grid-container" id="sello-ciclo-3"></div>
+      <h3>Ciclo 4</h3>
+      <div class="grid-container" id="sello-ciclo-4"></div>
+      <h3>Ciclo 5</h3>
+      <div class="grid-container" id="sello-ciclo-5"></div>
+      <h3>Ciclo 6</h3>
+      <div class="grid-container" id="sello-ciclo-6"></div>
+      <h3>Ciclo 7</h3>
+      <div class="grid-container" id="sello-ciclo-7"></div>
+      <h3>Ciclo 8</h3>
+      <div class="grid-container" id="sello-ciclo-8"></div>
+      <h3>Ciclo 9</h3>
+      <div class="grid-container" id="sello-ciclo-9"></div>
+      <h3>Ciclo 10</h3>
+      <div class="grid-container" id="sello-ciclo-10"></div>
+    </div>
+  </section>
+
+  <div id="selector-modal" class="modal hidden">
+    <div class="modal-content">
+      <h3>Selecciona una opción</h3>
+      <div id="selector-opciones"></div>
+      <button id="cerrar-modal">Cancelar</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
